<resources>
    <string name="app_name">BookReader</string>
    <string name="font_settings">Font Settings</string>
    <string name="bright_settings">Bright Settings</string>
    <string name="tts">TTS</string>
    <string name="action_view_pager">ViewPager</string>
    <string name="action_third_party">Third Party</string>
    <string name="action_simple">Simple</string>
    <string name="action_simple_gl">Simple GL</string>
</resources>
