<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ihuntto.myapplication.MainActivity">
    <item
        android:id="@+id/use_view_pager"
        android:orderInCategory="100"
        android:title="@string/action_view_pager"
        app:showAsAction="never" />
    <item
        android:id="@+id/use_simple"
        android:orderInCategory="100"
        android:title="@string/action_simple"
        app:showAsAction="never" />
    <item
        android:id="@+id/use_simple_gl"
        android:orderInCategory="100"
        android:title="@string/action_simple_gl"
        app:showAsAction="never" />
    <item
        android:id="@+id/use_third_party"
        android:orderInCategory="100"
        android:title="@string/action_third_party"
        app:showAsAction="never" />
</menu>
